--- a/src/mapedit/entity-filter.glade
+++ b/src/mapedit/entity-filter.glade
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="2.24"/>
-  <!-- interface-naming-policy project-wide -->
   <object class="GtkDialog" id="filter-dialog">
     <property name="width_request">320</property>
     <property name="height_request">600</property>
@@ -24,7 +23,7 @@
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
             <property name="use_action_appearance">False</property>
-            <property name="yalign">0.44999998807907104</property>
+            <property name="xalign">0</property>
             <property name="active">True</property>
             <property name="draw_indicator">True</property>
           </object>
@@ -35,7 +34,7 @@
           </packing>
         </child>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area1">
+          <object class="GtkButtonBox" id="dialog-action_area1">
             <property name="height_request">0</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
@@ -61,6 +60,7 @@
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
             <property name="use_action_appearance">False</property>
+            <property name="xalign">0</property>
             <property name="active">True</property>
             <property name="draw_indicator">True</property>
             <property name="group">rb_filter_off</property>
@@ -81,7 +81,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="hscrollbar_policy">never</property>
-                <property name="vscrollbar_policy">automatic</property>
                 <property name="shadow_type">in</property>
                 <child>
                   <object class="GtkTreeView" id="filter_view">
@@ -91,6 +90,9 @@
                     <property name="enable_search">False</property>
                     <property name="fixed_height_mode">True</property>
                     <property name="show_expanders">False</property>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection" id="treeview-selection1"/>
+                    </child>
                     <child>
                       <object class="GtkTreeViewColumn" id="filter_column">
                         <property name="sizing">fixed</property>
@@ -160,6 +162,7 @@
             <property name="receives_default">False</property>
             <property name="use_action_appearance">False</property>
             <property name="relief">none</property>
+            <property name="xalign">0</property>
             <property name="active">True</property>
             <property name="draw_indicator">True</property>
             <property name="group">rb_filter_off</property>
