--- a/src/modeller/modeller.glade
+++ b/src/modeller/modeller.glade
@@ -109,7 +109,7 @@
                             <child>
                               <object class="GtkTreeViewColumn" id="col_name">
                                 <property name="sizing">fixed</property>
-                                <property name="fixed_width">100</property>
+                                <property name="fixed_width">140</property>
                                 <property name="min_width">100</property>
                                 <property name="title" translatable="yes">Name</property>
                                 <property name="expand">True</property>
@@ -126,8 +126,8 @@
                             <child>
                               <object class="GtkTreeViewColumn" id="col_length">
                                 <property name="sizing">fixed</property>
-                                <property name="fixed_width">80</property>
-                                <property name="min_width">80</property>
+                                <property name="fixed_width">60</property>
+                                <property name="min_width">60</property>
                                 <property name="title" translatable="yes">Length</property>
                                 <child>
                                   <object class="GtkCellRendererSpin" id="rnd_length">
@@ -144,8 +144,8 @@
                             <child>
                               <object class="GtkTreeViewColumn" id="col_width">
                                 <property name="sizing">fixed</property>
-                                <property name="fixed_width">80</property>
-                                <property name="min_width">80</property>
+                                <property name="fixed_width">60</property>
+                                <property name="min_width">60</property>
                                 <property name="title" translatable="yes">Width</property>
                                 <child>
                                   <object class="GtkCellRendererSpin" id="rnd_width">
@@ -1380,6 +1380,7 @@
                                             <property name="search_column">0</property>
                                             <property name="fixed_height_mode">True</property>
                                             <property name="show_expanders">False</property>
+                                            <property name="tooltip_column">0</property>
                                             <child internal-child="selection">
                                               <object class="GtkTreeSelection" id="treeview-selection5"/>
                                             </child>
