--- a/src/modeller/modeller.glade
+++ b/src/modeller/modeller.glade
@@ -41,6 +41,7 @@
                 <property name="label">gtk-ok</property>
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
+                <property name="can_default">True</property>
                 <property name="can_focus">True</property>
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
@@ -58,7 +59,7 @@
                 <property name="label">gtk-cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
+                <property name="receives_default">False</property>
                 <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
@@ -659,7 +660,7 @@
                                       <object class="GtkButton" id="add_sprite">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="receives_default">False</property>
                                         <property name="use_action_appearance">False</property>
                                         <property name="image">img_add</property>
                                       </object>
@@ -674,7 +675,7 @@
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="receives_default">False</property>
                                         <property name="use_action_appearance">False</property>
                                         <property name="image">img_remove</property>
                                       </object>
@@ -689,7 +690,7 @@
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="receives_default">False</property>
                                         <property name="use_action_appearance">False</property>
                                         <property name="image">img_paste1</property>
                                       </object>
@@ -782,7 +783,7 @@
                                             <property name="visible">True</property>
                                             <property name="sensitive">False</property>
                                             <property name="can_focus">True</property>
-                                            <property name="receives_default">True</property>
+                                            <property name="receives_default">False</property>
                                             <property name="use_action_appearance">False</property>
                                             <property name="image">img_add1</property>
                                           </object>
@@ -797,7 +798,7 @@
                                             <property name="visible">True</property>
                                             <property name="sensitive">False</property>
                                             <property name="can_focus">True</property>
-                                            <property name="receives_default">True</property>
+                                            <property name="receives_default">False</property>
                                             <property name="use_action_appearance">False</property>
                                             <property name="image">img_remove1</property>
                                             <property name="image_position">right</property>
@@ -813,7 +814,7 @@
                                             <property name="visible">True</property>
                                             <property name="sensitive">False</property>
                                             <property name="can_focus">True</property>
-                                            <property name="receives_default">True</property>
+                                            <property name="receives_default">False</property>
                                             <property name="use_action_appearance">False</property>
                                             <property name="image">img_copy1</property>
                                           </object>
@@ -1111,7 +1112,7 @@
                                     <property name="label" translatable="yes">BBox Mode</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="receives_default">True</property>
+                                    <property name="receives_default">False</property>
                                     <property name="use_action_appearance">False</property>
                                     <property name="xalign">0.43000000715255737</property>
                                   </object>
@@ -1292,7 +1293,7 @@
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="receives_default">False</property>
                                         <property name="use_action_appearance">False</property>
                                         <property name="image">img_add2</property>
                                       </object>
@@ -1308,7 +1309,7 @@
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="receives_default">False</property>
                                         <property name="use_action_appearance">False</property>
                                         <property name="image">img_remove2</property>
                                       </object>
@@ -1460,7 +1461,7 @@
                                       <object class="GtkButton" id="btn_add_connector">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="receives_default">False</property>
                                         <property name="use_action_appearance">False</property>
                                         <property name="image">img_add3</property>
                                       </object>
@@ -1476,7 +1477,7 @@
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="receives_default">False</property>
                                         <property name="use_action_appearance">False</property>
                                         <property name="image">img_remove3</property>
                                       </object>
